# bevy_xpbd

crates/benches_common_3d/: Cargo.toml
crates/bevy_xpbd_2d/: Cargo.toml
crates/bevy_xpbd_3d/: Cargo.toml
crates/examples_common_2d/: Cargo.toml
crates/examples_common_3d/: Cargo.toml
crates/examples_common_3d/src/: lib.rs
src/plugins/collision/: narrow_phase.rs
src/plugins/debug/: configuration.rs  gizmos.rs  mod.rs
